# Audinary

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  bootstrap.sh  config.h.in  configure.ac  driver.cpp
audinary@zener-diode/: README.md  desklet.js  info.json  settings-schema.json
audinary@zener-diode/files/audinary@zener-diode/: desklet.js  metadata.json  settings-schema.json  stylesheet.css
audinary@zener-diode/files/audinary@zener-diode/po/: af.po  ar.po  audinary@zener-diode.pot  ca.po  cs.po  da.po  de.po  el.po  en.po  es-ES.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt-BR.po  pt-PT.po  ro.po  ru.po  sr.po  sv-SE.po  tr.po  uk.po  vi.po  zh-CN.po  zh-TW.po
audinary@zener-diode/service/: audinary  audinary.service
include/encoder/: huffman-coding.hpp
include/model/: beeper.hpp  numbers-to-words.hpp  textual-time.hpp
include/server/: http-server.hpp  router.hpp
service/: audinary  audinary.service
source/: Makefile  Makefile.in
source/encoder/: huffman-coding.cpp  json-builder.cpp
source/model/: numbers-to-words.cpp  textual-time.cpp
source/server/: http-server.cpp  router.cpp
